# neutts-air

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTAINERISATION.md  Dockerfile  INSTRUCTIONS.md  LICENSE  Makefile  PR_DRAFT.md  README.md  TRAINING.md  finetune_config.yaml  instructions.md  oai.py  pyproject.toml  requirements-dev.txt  requirements-gpu-frozen.txt  requirements-gpu.txt  requirements.txt  run_api_server.py  save_audio.py  start_api_server.sh  stop_api_server.sh  test_api.py
.github/: copilot-instructions.md
api/: auth.py  config.py  models.py  requirements.txt  server.py  text_splitter.py  utils.py
cache/: dave.pt
examples/: README.md  basic_example.py  basic_streaming_example.py  encode_reference.py  finetune.py  finetune_config.yaml  interactive_example.ipynb  interactive_streaming_example.py  long_text_example.py  onnx_example.py  onnx_example_gpu.py  onnx_wasm_serve.py  provider_benchmark.py  vllm_streaming_example.py  wyoming_server.py
neutts/: __init__.py  neutts.py
neuttsair/: __init__.py  benchmark.py  constants.py  neutts.py
samples/: input.txt
scripts/: preencode_references.py  reference_cache_benchmark.py
src/neuttsair/: neutts.py
tests/: test_benchmark.py  test_device_selection.py  test_neutts.py
tools/: reference_cache_benchmark.py
web/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
web/public/samples/: ref_codes.json  ref_text.txt
web/src/: audio.ts  decoder.ts  main.ts
