[project]
name = "neuttsair"
version = "0.1.0"
description = "NeuTTS Air - A lightweight, on-device, TTS speech language model with instant voice cloning"
readme = "README.md"
authors = [
    { name = "Neuphonic", email = "support@neuphonic.com" }
]
requires-python = ">=3.12"
dependencies = [
    "librosa==0.11.0",
    "neucodec>=0.0.4",
    "numpy==2.2.6",
    "soundfile==0.13.1",
    "torch==2.8.0",
    "transformers==4.56.1",
    "resemble-perth==1.0.1",
    "espeakng-loader>=0.2.4",
    "phonemizer-fork>=3.3.2",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
